typed-schema/tests/ui/fail/missing_op_output.stderr
error: missing op output
  --> tests/ui/fail/missing_op_output.rs:12:8
   |
12 | struct BadOp;
   |        ^^^^^
